Add additional relationship credential, bump versions

--- a/bcreg-x/config/services.yml
+++ b/bcreg-x/config/services.yml
@@ -6,6 +6,7 @@ issuers:
       url_en: https://www2.gov.bc.ca/gov/content/governments/organizational-structure/ministries-organizations/ministries/citizens-services/bc-registries-online-services
       email: bcregistries@gov.bc.ca
       logo_path: ../assets/img/bcreg-logo-square.jpg
+      endpoint: $ENDPOINT_URL
 
     connection:
       type: OrgBook
