Update backup configuration
- Migrate to cron scheduling.

--- a/openshift/config/backup.conf
+++ b/openshift/config/backup.conf
@@ -13,3 +13,6 @@
 event-db:5432/bc_reg_db
 mara-db:5432/mara_db
 wallet-db:5432/bcreg_issuer
+
+# Schedule backup for 1am PST; system TZ is UTC
+0 9 * * * default ./backup.sh -s
