Added rocket chat web hooks support for alerts

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       dockerfile: Dockerfile
     environment:
       APPLICATION_URL: ${APPLICATION_URL:-http://localhost:5000}
+      ENDPOINT_URL: ${ENDPOINT_URL:-http://localhost:5001}
       CONFIG_ROOT: ../config
       ENVIRONMENT: ${ENVIRONMENT:-default}
       ENABLE_GUNICORN: ${ENABLE_GUNICORN:-0}
@@ -64,6 +65,12 @@ services:
       context: ../data-pipeline
       dockerfile: docker/mara-app/Dockerfile
     environment:
+      # web hooks
+      - ENVIRONMENT=${ENVIRONMENT:-default}
+      - WEBHOOK_URL=${WEBHOOK_URL}
+      - WEBHOOK_LEVEL=${WEBHOOK_LEVEL:-0}  # 0=Error, 1=Warning, 2=Info
+      - PROJECT_NAME=${PROJECT_NAME:-von-bc-registries-agent}
+      - FRIENDLY_PROJECT_NAME=${FRIENDLY_PROJECT_NAME:-BC Registries Data Pipeline}
       - VONX_API_URL=${VONX_API_URL:-http://bcreg-agent:8000/bcreg}
       # [bc_registries]
       - BC_REG_DB_HOST=${BC_REG_DB_HOST:-host.docker.internal}
