--- a/jenkins/mara/Jenkinsfile
+++ b/jenkins/mara/Jenkinsfile
@@ -1,3 +1,6 @@
+// Wait timeout in minutes
+def WAIT_TIMEOUT = 10
+
 // Edit your app's name below 
 def APP_NAME = 'mara'
 
@@ -5,7 +8,7 @@ def APP_NAME = 'mara'
 def TAG_NAMES = ['dev', 'test', 'prod']
 
 // You shouldn't have to edit these if you're following the conventions
-def BUILD_CONFIG = APP_NAME
+def APP_LABEL = APP_NAME
 
 //EDIT LINE BELOW (Change `IMAGESTREAM_NAME` so it matches the name of your *output*/deployable image stream.) 
 def IMAGESTREAM_NAME = APP_NAME
@@ -61,14 +64,34 @@ String getImageTagHash(String imageName, String tag = "") {
 node {
   if( triggerBuild(CONTEXT_DIRECTORY) ) {
 
-    stage("Build ${BUILD_CONFIG}") {
+    stage("Build ${APP_LABEL}") {
       script {
         openshift.withCluster() {
           openshift.withProject() {
 
-            echo "Building ${BUILD_CONFIG} ..."
-            def build = openshift.selector("bc", "${BUILD_CONFIG}")
-            build.startBuild().logs("-f")
+            // Find all of the build configurations associated to the application using labels ...
+            def buildconfigs = openshift.selector("bc", [ app : "${APP_LABEL}" ])
+            echo "Found ${buildconfigs.count()} buildconfigs for app label (app=${APP_LABEL}): ${buildconfigs.names()}"
+
+            // Kick off all the builds in parallel ...
+            def builds = buildconfigs.startBuild()
+            echo "Started ${builds.count()} builds: ${builds.names()}"
+
+            timeout(WAIT_TIMEOUT) {
+              // Wait for all the builds to complete ...
+              // This section will exit after the last build completes.
+              echo "Waiting for builds to complete ..."
+              builds.withEach {
+                // untilEach and watch - do not support watching multiple named resources,
+                // so we have to feed it one at a time.
+                it.untilEach(1) {
+                    echo "${it.object().status.phase} - ${it.name()}"
+                    return (it.object().status.phase == "Complete")
+                }
+              }
+            }
+
+            echo "Builds complete ..."
           }
         }
       }
