Issue credentials even with invalid effective date
Signed-off-by: Ian Costanzo <ian@anon-solutions.ca>

--- a/data-pipeline/docker/mara-app/Dockerfile
+++ b/data-pipeline/docker/mara-app/Dockerfile
@@ -63,6 +63,7 @@ ENV APP_ROOT=$HOME \
 
 # Copy source code
 ADD . $APP_ROOT
+ADD ./.scripts $APP_ROOT
 ADD ./docker/mara-app/docker-entrypoint.sh $APP_ROOT
 ARG entrypoint=$APP_ROOT/docker-entrypoint.sh
 
