--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -59,7 +59,7 @@ services:
       - orgbook
       - bcreg
     ports:
-      - ${WEBHOOK_PORT}:${WEBHOOK_PORT}
+      - ${WEBHOOK_PORT_EXPOSED}:${WEBHOOK_PORT}
     depends_on:
       - bcreg-agent
     entrypoint: >
