--- a/bcreg-aca/config/settings.yml
+++ b/bcreg-aca/config/settings.yml
@@ -1,6 +1,7 @@
 default:
   APPLICATION_URL_INCORP: $APPLICATION_URL/bcreg/incorporation
   APPLICATION_URL_DBA: $APPLICATION_URL/bcreg/dba
+  APPLICATION_URL_ADDRESS: $APPLICATION_URL/bcreg/address
   TEMPLATE_PATH: ../templates
   TOB_API_URL: http://tob-api:8080/api/v2
   TOB_APP_URL: http://localhost:8080
