--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: ../bcreg-x
       dockerfile: Dockerfile.caddy
     environment:
-      TOB_API_URL: ${TOB_API_URL:-}
+      TOB_API_URL: ${TOB_API_URL}
       WEB_BASE_HREF: ${WEB_BASE_HREF:-/}
       WEB_HOST_NAME: ${WEB_HOST_NAME:-0.0.0.0}
       WEB_HOST_PORT: ${WEB_HOST_PORT:-8080}
@@ -35,12 +35,12 @@ services:
       ENVIRONMENT: ${ENVIRONMENT:-default}
       ENABLE_GUNICORN: ${ENABLE_GUNICORN:-0}
       INDY_LEDGER_URL: ${LEDGER_URL:-http://localhost:9000}
-      FORMS: ${FORMS:-}
-      ISSUERS: ${ISSUERS:-}
-      LOG_LEVEL: ${LOG_LEVEL:-}
+      FORMS: ${FORMS}
+      ISSUERS: ${ISSUERS}
+      LOG_LEVEL: ${LOG_LEVEL}
       PYTHON_ENV: ${PYTHON_ENV:-development}
-      TOB_API_URL: ${TOB_API_URL:-}
-      TOB_APP_URL: ${TOB_APP_URL:-}
+      TOB_API_URL: ${TOB_API_URL}
+      TOB_APP_URL: ${TOB_APP_URL}
       WALLET_TYPE: ${WALLET_TYPE}
       POSTGRESQL_WALLET_HOST: ${POSTGRESQL_WALLET_HOST}
       POSTGRESQL_WALLET_PORT: ${POSTGRESQL_WALLET_PORT}
@@ -48,7 +48,7 @@ services:
       POSTGRESQL_WALLET_PASSWORD: ${POSTGRESQL_PASSWORD}
       POSTGRESQL_WALLET_ADMIN_PASSWORD: ${POSTGRESQL_ADMIN_PASSWORD}
       WALLET_ENCRYPTION_KEY: ${WALLET_ENCRYPTION_KEY}
-      WALLET_SEED_VONX: ${WALLET_SEED_VONX:-}
+      WALLET_SEED_VONX: ${WALLET_SEED_VONX}
       ISSUER_WALLET_DID: ${ISSUER_WALLET_DID}
       HTTP_FORCE_CLOSE_CONNECTIONS: "true"
       AGENT_ADMIN_URL: http://bcreg-agent:${AGENT_ADMIN_PORT}
@@ -79,7 +79,7 @@ services:
       - POSTGRESQL_WALLET_PASSWORD=${POSTGRESQL_PASSWORD}
       - POSTGRESQL_WALLET_ADMIN_PASSWORD=${POSTGRESQL_ADMIN_PASSWORD}
       - WALLET_ENCRYPTION_KEY=${WALLET_ENCRYPTION_KEY}
-      - WALLET_SEED_VONX=${WALLET_SEED_VONX:-}
+      - WALLET_SEED_VONX=${WALLET_SEED_VONX}
       - ISSUER_WALLET_DID=${ISSUER_WALLET_DID}
       - WEBHOOK_URL=${WEBHOOK_HOST}/api/agentcb
       - AGENT_HTTP_IN_PORT=${AGENT_HTTP_IN_PORT}
@@ -100,7 +100,7 @@ services:
         "-c",
         "curl -d '{\"seed\":\"${WALLET_SEED_VONX}\", \"role\":\"TRUST_ANCHOR\", \"alias\":\"${AGENT_NAME}\"}' -X POST ${LEDGER_URL}/register; \
         sleep 3; \
-        aca-py \
+        aca-py start \
         --inbound-transport http '0.0.0.0' ${AGENT_HTTP_IN_PORT} \
         --inbound-transport ws '0.0.0.0' ${AGENT_WS_IN_PORT} \
         --endpoint ${AGENT_ENDPOINT} \
@@ -118,7 +118,7 @@ services:
         --wallet-name 'icat_agent_wallet' \
         --wallet-key '${WALLET_ENCRYPTION_KEY}' \
         --wallet-storage-type '${WALLET_TYPE}' \
-        --wallet-storage-config '{\"url\":\"${POSTGRESQL_WALLET_HOST}:${POSTGRESQL_WALLET_PORT}\",\"max_connections\":5}' \
+        --wallet-storage-config '{\"url\":\"${POSTGRESQL_WALLET_HOST}:${POSTGRESQL_WALLET_PORT}\",\"max_connections\":5,\"wallet_scheme\":\"MultiWalletSingleTable\"}' \
         --wallet-storage-creds '{\"account\":\"${POSTGRESQL_USER}\",\"password\":\"${POSTGRESQL_PASSWORD}\",\"admin_account\":\"postgres\",\"admin_password\":\"${POSTGRESQL_ADMIN_PASSWORD}\"}' \
         --seed '${WALLET_SEED_VONX}' \
         --admin '0.0.0.0' ${AGENT_ADMIN_PORT} \
