Migrate updates from issuer controller repo
Signed-off-by: Ian Costanzo <ian@anon-solutions.ca>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -174,7 +174,8 @@ services:
       - mara-data:/var/lib/pgsql/data
 
   bcreg-wallet-db:
-    image: registry.access.redhat.com/rhscl/postgresql-95-rhel7:9.5
+    #image: registry.access.redhat.com/rhscl/postgresql-95-rhel7:9.5
+    image: postgresql
     environment:
       - POSTGRESQL_USER=${POSTGRESQL_USER}
       - POSTGRESQL_PASSWORD=${POSTGRESQL_PASSWORD}
