--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -105,8 +105,11 @@ services:
         --admin '0.0.0.0' ${AGENT_ADMIN_INTERFACE_PORT} \
         --${AGENT_ADMIN_MODE} \
         --label ${AGENT_NAME} \
-        --protocol indy_catalyst_issuer_registration",
+        --plugin indy_catalyst_issuer_registration",
       ]
+
+#        --log-config '/home/indy/debug-logger.cfg' \
+#        --log-level 'debug' \
 
   bcregmara:
     build:
