--- a/bcreg-aca/config/services.yml
+++ b/bcreg-aca/config/services.yml
@@ -307,6 +307,296 @@ issuers:
                 input: reason_description
                 from: claim
 
+      - schema: business_number.registries.ca
+        issuer_url: $APPLICATION_URL_ADDRESS
+        description: TODO
+        details:
+          label_en: Corporate Business Number
+          url_en: $APPLICATION_URL_ADDRESS
+        credential:
+          effective_date:
+            input: effective_date
+            from: claim
+          revoked_date:
+            input: expiry_date
+            from: claim
+        topic:
+          source_id:
+            input: registration_id
+            from: claim
+          type:
+            input: registration.registries.ca
+            from: value
+        cardinality_fields:
+          - business_number
+        mapping:
+          - model: attribute
+            fields:
+              type:
+                input: business_number
+                from: value
+              value:
+                input: business_number
+                from: claim
+
+      - schema: verified_individual.registries.ca
+        issuer_url: $APPLICATION_URL_ADDRESS
+        description: TODO
+        details:
+          label_en: Verified Individual
+          url_en: $APPLICATION_URL_ADDRESS
+        credential:
+          effective_date:
+            input: effective_date
+            from: claim
+          inactive:
+            input: entity_status
+            from: claim
+            processor:
+              - bcgov.entity_status.is_historical
+          revoked_date:
+            input: expiry_date
+            from: claim
+        topic:
+          source_id:
+            input: registration_id
+            from: claim
+          type:
+            input: verified_individual.registries.ca
+            from: value
+        mapping:
+          - model: name
+            fields:
+              type:
+                input: individual_name
+                from: value
+              text:
+                input: individual_name
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: entity_status
+                from: value
+              format:
+                input: category
+                from: value
+              value:
+                input: entity_status
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: first_name
+                from: value
+              value:
+                input: first_name
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: last_name
+                from: value
+              value:
+                input: last_name
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: email_address
+                from: value
+              value:
+                input: email_address
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: phone_number
+                from: value
+              value:
+                input: phone_number
+                from: claim
+
+      - schema: individual_relationship.registries.ca
+        issuer_url: $APPLICATION_URL_DBA
+        description: TODO
+        details:
+          label_en: Relationship
+          url_en: $APPLICATION_URL_DBA
+        credential:
+          effective_date:
+            input: effective_date
+            from: claim
+          revoked_date:
+            input: expiry_date
+            from: claim
+        topic:
+          related_source_id:
+            input: associated_registration_id
+            from: claim
+          related_type:
+            input: registration.registries.ca
+            from: value
+          source_id:
+            input: registration_id
+            from: claim
+          type:
+            input: verified_individual.registries.ca
+            from: value
+        cardinality_fields:
+          - associated_registration_id
+        mapping:
+          - model: attribute
+            fields:
+              type:
+                input: relationship
+                from: value
+              format:
+                input: category
+                from: value
+              value:
+                input: relationship
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: relationship_description
+                from: value
+              value:
+                input: relationship_description
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: associated_registration_name
+                from: value
+              value:
+                input: associated_registration_name
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: relationship_status
+                from: value
+              format:
+                input: category
+                from: value
+              value:
+                input: relationship_status
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: relationship_status_effective
+                from: value
+              format:
+                input: datetime
+                from: value
+              value:
+                input: relationship_status_effective
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: reason_description
+                from: value
+              format:
+                input: category
+                from: value
+              value:
+                input: reason_description
+                from: claim
+
+      - schema: org_relationship.registries.ca
+        issuer_url: $APPLICATION_URL_DBA
+        description: TODO
+        details:
+          label_en: Relationship
+          url_en: $APPLICATION_URL_DBA
+        credential:
+          effective_date:
+            input: effective_date
+            from: claim
+          revoked_date:
+            input: expiry_date
+            from: claim
+        topic:
+          related_source_id:
+            input: associated_registration_id
+            from: claim
+          related_type:
+            input: verified_individual.registries.ca
+            from: value
+          source_id:
+            input: registration_id
+            from: claim
+          type:
+            input: registration.registries.ca
+            from: value
+        cardinality_fields:
+          - associated_registration_id
+        mapping:
+          - model: attribute
+            fields:
+              type:
+                input: relationship
+                from: value
+              format:
+                input: category
+                from: value
+              value:
+                input: relationship
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: relationship_description
+                from: value
+              value:
+                input: relationship_description
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: associated_registration_name
+                from: value
+              value:
+                input: associated_registration_name
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: relationship_status
+                from: value
+              format:
+                input: category
+                from: value
+              value:
+                input: relationship_status
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: relationship_status_effective
+                from: value
+              format:
+                input: datetime
+                from: value
+              value:
+                input: relationship_status_effective
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: reason_description
+                from: value
+              format:
+                input: category
+                from: value
+              value:
+                input: reason_description
+                from: claim
+
 verifiers:
   bctob:
     name: BC OrgBook
