Update pipeline to auto submit audit corps
Signed-off-by: Ian Costanzo <ian@anon-solutions.ca>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -83,13 +83,14 @@ services:
       - EVENT_PROC_DB_PORT=${EVENT_PROC_DB_PORT:-5432}
       - EVENT_PROC_DB_DATABASE=${EVENT_PROC_DB_DATABASE:-bc_reg_db}
       - EVENT_PROC_DB_USER=${EVENT_PROC_DB_USER:-bc_reg_db}
-      - EVENT_PROC_DB_PASSWORD=
+      - EVENT_PROC_DB_PASSWORD=${EVENT_PROC_DB_PASSWORD:-bc_reg_db_pwd}
       - LOG_LEVEL=${LOG_LEVEL}
       # [mara_db]
       - MARA_DB_HOST=${MARA_DB_HOST:-bcregdb}
       - MARA_DB_PORT=${MARA_DB_PORT:-5432}
       - MARA_DB_DATABASE=${MARA_DB_DATABASE:-mara_db}
       - MARA_DB_USER=${MARA_DB_USER:-mara_db}
+      - MARA_DB_PASSWORD=${MARA_DB_PASSWORD:-mara_db_pwd}
       # orgbook DB
       - ORGBOOK_DB_HOST=${ORGBOOK_DB_HOST:-tob-db}
       - ORGBOOK_DB_PORT=${ORGBOOK_DB_PORT:-5432}
