--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -49,7 +49,7 @@ services:
     entrypoint: >
       /bin/bash -c "
         echo sleeping ...;
-        sleep 20;
+        sleep 30;
         ../docker-entrypoint.sh;"
 
   bcreg-agent:
@@ -77,6 +77,7 @@ services:
     networks:
       - orgbook
       - bcreg
+    # when running "./manage scale" comment out or remove these port mappings:
     ports:
       - ${AGENT_HTTP_INTERFACE_PORT}:${AGENT_HTTP_INTERFACE_PORT}
       - ${AGENT_WS_INTERFACE_PORT}:${AGENT_WS_INTERFACE_PORT}
