Add INFO logging for cred offers
Signed-off-by: Ian Costanzo <ian@anon-solutions.ca>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       TOB_ADMIN_API_KEY: ${TOB_ADMIN_API_KEY}
       EXTRA_DEMO_CREDS: ${EXTRA_DEMO_CREDS}
       RECORD_TIMINGS: ${RECORD_TIMINGS}
+      LOG_LEVEL: ${LOG_LEVEL}
       TRACE_EVENTS: ${TRACE_EVENTS}
       TRACE_TARGET: ${TRACE_TARGET}
       TRACE_MSG_PCT: ${TRACE_MSG_PCT}
